@@ -1,3 +1,7 @@
+2017-06-04  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	* mktexfmt.c: Adapt to the new fmtutil.pl in TeX Live.
+
 2016-04-06  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
 
 	* All *.c, *.h files: Copyright year 2016.
